<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/light_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/title"
        android:id="@+id/textTitle"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/popular_movies"
        android:id="@+id/buttonPopularMovies"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:textSize="18sp"
        android:onClick="startSpotify"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/scores_app"
        android:id="@+id/buttonScores"
        android:layout_below="@+id/buttonPopularMovies"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:textSize="18sp"
        android:onClick="startScores"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/library_app"
        android:id="@+id/buttonLibrary"
        android:layout_below="@+id/buttonScores"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:textSize="18sp"
        android:onClick="startLibrary"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/buttonBuildItBigger"
        android:layout_below="@+id/buttonLibrary"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:textSize="18sp"
        android:onClick="startBuildIt"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/xyz_reader"
        android:id="@+id/buttonXYZReader"
        android:layout_below="@+id/buttonBuildItBigger"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange"
        android:textSize="18sp"
        android:onClick="startXYZ"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/capstone"
        android:id="@+id/buttonCapstone"
        android:layout_below="@+id/buttonXYZReader"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:onClick="startCapstone"/>
</RelativeLayout>
